[metadata]
name = transit-backend
version = 0.1
author = TVKain
author_email = tvkain.it@gmail.com
description = Mini cloud backend 
long_description = file: README.md
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]

packages=find:

install_requires = 
    PyMySql
    setuptools
    Flask-SQLAlchemy
    pymysql
    pydantic
    taskflow
    cotyledon
    fastapi 
    sqlmodel 
    uvicorn 
    openstacksdk
    alembic

[options.entry_points]
console_scripts =
 


[options.extras_require]
dev = 
    pytest

[tool.pylint]
ignored-modules = ["alembic.context", "alembic.op"]




